--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-#show_downloads: true
+title: Yichen's personal website
+description: Welcome to Yichen's personal website
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
