--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yichen's personal website
-description: Welcome to Yichen's personal website
+description: yichen.liu.1@vanderbilt.edu
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
